--- a/src/Components/MenuRight/Style.css
+++ b/src/Components/MenuRight/Style.css
@@ -62,7 +62,7 @@ margin-bottom: 20px;
 .menu__main{
     display: flex;
 margin-top: 30px;
-gap: 30px;
+gap: 20px;
 }
 .menu__item_wrapper{
     display: flex;
@@ -70,20 +70,37 @@ gap: 30px;
     box-shadow: 1px 1px 6px 1.2px rgba(0,0,0,0.25), -1px -1px 6px 1.2px rgba(0,0,0,0.22);
     margin: 30px auto;
     border-radius: 8px;
-   width: 400px;
+   width: 500px;
 }
 .menu__item_wrapper h3{
     font-size: 15px;
     padding: 10px 10px;
 }
+.menu__item_wrapper p{
+    font-size: 10px;
+    padding: 10px 10px;
+}
+.menu__item_wrapper img{
+    padding: 10px 10px;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 16px;
+}
 @media screen and (max-width: 480px) {
     .menu__main {
         flex-direction: column;
-    margin-left: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 }
 @media screen and (max-width: 480px) {
     .menu__item_wrapper {
-        width: 500px;
+        width: 95%;
+}}
+@media screen and (max-width: 730px) {
+    .menu__main {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 }
