--- a/src/Components/MenuRight/Style.css
+++ b/src/Components/MenuRight/Style.css
@@ -7,8 +7,8 @@
 @import "tailwindcss/utilities";
   .menu__card {
     margin: 30px auto;
-    max-width: 100px;
-    max-height: 100px;
+    width: 100px;
+    height: 100px;
     border-radius: 8px;
   box-shadow: 1px 1px 6px 1.2px rgba(0,0,0,0.25), -1px -1px 6px 1.2px rgba(0,0,0,0.22);
     cursor: pointer;
@@ -54,11 +54,6 @@
       flex-direction: column;
     }
   }
-.submenu__wrapper{
-    display: flex;
-gap: 10px;
-margin-bottom: 20px;
-}
 .menu__main{
     display: flex;
 margin-top: 30px;
