--- a/src/common-components/sub-navigator/Style.css
+++ b/src/common-components/sub-navigator/Style.css
@@ -1,10 +1,110 @@
-.subnav__wrapper{
-    display: flex;
-    margin: auto;
-    padding: 10px;
-   
-}
-.subnav__item{
-    padding: 25px 25px 25px 25px;
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+  .menu__card {
+    margin: 30px auto;
+
+    width: 100px;
+    height: 100px;
+    border-radius: 8px;
+  box-shadow: 1px 1px 6px 1.2px rgba(0,0,0,0.25), -1px -1px 6px 1.2px rgba(0,0,0,0.22);
+    cursor: pointer;
+    transition: 0.4s;
+  }
+  
+
+  .menu__card .menu__card_image img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+  }
+  
+  .menu__card .menu__card_title {
+
+    text-align: center;
+    border-radius: 0px 0px 8px 8px;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 10px;
+    margin-top: -80px;
+    max-height: 40px;
+
+  }
+  
+  .menu__card:hover {
+    box-shadow: 1px 1px 2px 3px rgba(0,0,0,0.25), 
+      -1px -1px 6px 3px rgba(0,0,0,0.22);
+  }
+  
+  .title-white {
+    color: white;
+  }
+  
+  .title-black {
+    color: black;
+  }
+  
+
+.submenu__wrapper{
+    padding: 20px 20px;
+  width: 100vw;
+    display: flex;
+gap: 10px;
+overflow-x: scroll;
+overflow-y:hidden;
+white-space: nowrap;
+
+margin-bottom: 20px;
+}
+.menu__main{
+    display: flex;
+margin-top: 30px;
+gap: 20px;
+}
+.menu__item_wrapper{
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 1px 1px 6px 1.2px rgba(0,0,0,0.25), -1px -1px 6px 1.2px rgba(0,0,0,0.22);
+    margin: 30px auto;
+    border-radius: 8px;
+   width: 500px;
+}
+.menu__item_wrapper h3{
+    font-size: 15px;
+    padding: 10px 10px;
+}
+.menu__item_wrapper p{
+    font-size: 10px;
+    padding: 10px 10px;
+}
+.menu__item_wrapper img{
+    padding: 10px 10px;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 16px;
+}
+.menu__itemcount{
+  margin: 5px 5px 5px 5px ;
+}
+@media screen and (max-width: 480px) {
+    .menu__main {
+        flex-direction: column;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+}
+@media screen and (max-width: 480px) {
+    .menu__item_wrapper {
+        width: 95%;
+}}
+@media screen and (max-width: 730px) {
+    .menu__main {
+    margin-left: 10px;
+    margin-right: 10px;
+}
 }
