--- a/src/Components/ItemCard/Style.css
+++ b/src/Components/ItemCard/Style.css
@@ -21,8 +21,8 @@ gap: 20px;
 }
 .menu__item_wrapper img{
     padding: 10px 10px;
-    width: 100px;
-    height: 100px;
+    width: 125px;
+    height: 125px;
     object-fit: cover;
     border-radius: 16px;
 }
@@ -30,3 +30,16 @@ gap: 20px;
     .menu__item_wrapper {
         width: 95%;
 }}
+.card__footer{
+    width: 100%;
+    display: flex;
+    padding: 10px 10px;
+    justify-content: space-between;
+}
+.card__nutrition{
+    padding-top: 10px;
+    font-size: x-small;
+}
+.card__right{
+    padding-right: 10px;
+}
