--- a/src/pages/Style.css
+++ b/src/pages/Style.css
@@ -8,3 +8,187 @@ font-size: 2rem;
 .orders__list{
     padding: 30px 30px;
 }
+@use postcss-preset-env {
+    stage: 0;
+  }
+  
+
+  
+  
+  * {
+    box-sizing: inherit;
+  }
+  
+/* {
+    box-sizing: border-box;
+  } */
+  
+
+  
+  address {
+    font-style: normal;
+  }
+  
+  button {
+    border: 0;
+    color: inherit;
+    cursor: pointer;
+    font: inherit;
+  }
+  
+  fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
+  
+
+  legend {
+    font-weight: 600;
+    margin-block-end: 0.5em;
+    padding: 0;
+  }
+  
+  input {
+    border: 0;
+    color: inherit;
+    font: inherit;
+  }
+  
+  input[type="radio"] {
+    accent-color: var(--color-primary);
+  }
+  
+  table {
+    border-collapse: collapse;
+    inline-size: 100%;
+  }
+  
+  tbody {
+    color: #b4b4b4;
+  }
+  
+  td {
+    padding-block: 0.125em;
+  }
+  
+  tfoot {
+    border-top: 1px solid #b4b4b4;
+    font-weight: 600;
+  }
+  
+  .align {
+    display: grid;
+    place-items: center;
+  }
+  
+  .button {
+    align-items: center;
+    background-color: var(--color-primary);
+    border-radius: 999em;
+    color: #fff;
+    display: flex;
+    gap: 0.5em;
+    justify-content: center;
+    padding-block: 0.75em;
+    padding-inline: 1em;
+    transition: 0.3s;
+  }
+/*   
+  .button:focus,
+  .button:hover {
+    background-color: #e96363;
+  } */
+  
+  .button--full {
+    inline-size: 100%;
+  }
+  
+  .tips__card {
+    /* border-radius: 1em;
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.0625); */
+
+    background-color: var(--color-primary);
+    color: black;
+    padding: 10px;
+    max-width: 700px;
+  }
+  
+  .form {
+    display: grid;
+  }
+  
+  .form__radios {
+    display: grid;
+    gap: 1em;
+  }
+  
+  .form__radio {
+    align-items: center;
+    background-color: #fefdfe;
+    border-radius: 1em;
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.0625);
+    display: flex;
+    padding: 1em;
+  }
+  .card__details{
+    align-items: center;
+    background-color: #fefdfe;
+    border-radius: 1em;
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.0625);
+    display: flex;
+    padding: 1em;
+  }
+  
+  .form__radio label {
+    align-items: center;
+    display: flex;
+    flex: 1;
+    gap: 1em;
+  }
+  
+  .header {
+    display: flex;
+    justify-content: center;
+    padding-block: 0.5em;
+    padding-inline: 1em;
+  }
+  
+  .icon {
+    block-size: 1em;
+    display: inline-block;
+    fill: currentColor;
+    inline-size: 1em;
+    vertical-align: middle;
+  }
+  
+  .payment__container {
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.0625);
+    inline-size: 375px;
+    overflow: auto;
+    width: 100%;
+    padding: 5px;
+    margin-top: 500px;
+    margin: auto auto;
+  }
+  .server__avatar{
+    width: 100px;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;   
+  }
+  .button__full{
+    background-color: #e96363;
+    border-radius: 50px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+  html, body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative
+  }
